add header section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,29 @@
     <title>Developer Portfolio</title>
   </head>
   <body>
-    <h2>hello world</h2>
+    <header class="header">
+      <div class="container">
+        <div class="header__wraper flex center sb">
+          <h4 class="logo">Johnatham Spector</h4>
+          <nav class="navigation">
+            <ul class="flex center">
+              <li>
+                <a href="">Articles</a>
+              </li>
+              <li>
+                <a href="">Chats</a>
+              </li>
+              <li>
+                <a href="">Awards</a>
+              </li>
+              <li>
+                <a href="">Awards</a>
+              </li>
+            </ul>
+          </nav>
+          <a href="" class="btn">Get in touch</a>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
