add main section markup

--- a/index.html
+++ b/index.html
@@ -44,5 +44,14 @@
         </div>
       </div>
     </header>
+    <main class="main">
+      <div class="container">
+        <section class="section summary"></section>
+        <section class="section companies"></section>
+        <section class="section projects"></section>
+        <section class="section experience"></section>
+        <section class="section cta"></section>
+      </div>
+    </main>
   </body>
 </html>
