add summary section

--- a/index.html
+++ b/index.html
@@ -46,7 +46,14 @@
     </header>
     <main class="main">
       <div class="container">
-        <section class="section summary"></section>
+        <section class="section summary">
+          <h1>Helping companies build better, scalable software.</h1>
+          <p>
+            Award-winning web developoer and author, with over 15+ years of
+            working experience with 500 copanies like Apple, Google, Facebook,
+            and more.
+          </p>
+        </section>
         <section class="section companies"></section>
         <section class="section projects"></section>
         <section class="section experience"></section>
