add companies section

--- a/index.html
+++ b/index.html
@@ -54,7 +54,14 @@
             and more.
           </p>
         </section>
-        <section class="section companies"></section>
+        <section class="section companies flex center sb">
+          <img src="./assets/Logos/Walmart.svg" alt="Walmart svg" />
+          <img src="./assets/Logos/JP Morgan.svg" alt="JP Morgan svg" />
+          <img src="./assets/Logos/Visa.svg" alt="Visa svg" />
+          <img src="./assets/Logos/Tinder.svg" alt="Tinder svg" />
+          <img src="./assets/Logos/Samsung.svg" alt="Samsung svg" />
+          <img src="./assets/Logos/Verizon.svg" alt="Verizon svg" />
+        </section>
         <section class="section projects"></section>
         <section class="section experience"></section>
         <section class="section cta"></section>
