add project section

--- a/index.html
+++ b/index.html
@@ -62,7 +62,27 @@
           <img src="./assets/Logos/Samsung.svg" alt="Samsung svg" />
           <img src="./assets/Logos/Verizon.svg" alt="Verizon svg" />
         </section>
-        <section class="section projects"></section>
+        <section class="section projects flex center sb">
+          <div class="project card">
+            <img src="./assets/Spense.png" alt="spence image" />
+            <h1>Spense.com</h1>
+            <p>
+              Rethinking the way writers get paid, an open-source platform
+              degined to help writers focus more on writing, and less on when
+              and how they'll get paid. Project in collaboration with
+              Codewell.cc
+            </p>
+          </div>
+          <div class="projec card">
+            <img src="./assets/YelpCamp.png" alt="yelpcamp image" />
+            <h1>YelpCamp.com</h1>
+            <p>
+              Allowing backpack travelers to perfectly plan their trip through
+              an open-source platform similar to TripAdvisor. With over 1m MAU,
+              YelpCamp has been the crowd's favorite in 2021.
+            </p>
+          </div>
+        </section>
         <section class="section experience"></section>
         <section class="section cta"></section>
       </div>
