--- a/index.html
+++ b/index.html
@@ -83,7 +83,39 @@
             </p>
           </div>
         </section>
-        <section class="section experience"></section>
+        <section class="section experience flex center sb">
+          <div class="card">
+            <h1>A co-founder at one of the world's largest communities.</h1>
+            <p>
+              The combined experience I have working at the top Fortune 500
+              companies has allowed me to developer a skillset that helps me in
+              not just development, but in every aspect of any business.
+            </p>
+            <p>
+              I'm proud to announce that I am now working at one of the world's
+              largest communities teaching young minds about how to sell
+              yourself as a developer and open them to a whole new world of
+              opportunities.
+            </p>
+          </div>
+          <div class="card">
+            <p>
+              As a developer, you have everything available to you and all
+              that's holding you back is yourself.
+            </p>
+            <p>A quote I live by perfectly illustrates what I mean.</p>
+            <p>
+              "How big would you dream, if you knew you wouldn't fail?" You've
+              already gone through the hardest parts being a developer, it's
+              time to elevate your skills and become a leader in something
+              you're passionate about.
+            </p>
+            <p>
+              I'm happy to chat over coffee some time about how I can help your
+              company.
+            </p>
+          </div>
+        </section>
         <section class="section cta"></section>
       </div>
     </main>
