--- a/index.html
+++ b/index.html
@@ -116,7 +116,17 @@
             </p>
           </div>
         </section>
-        <section class="section cta"></section>
+        <section class="section cta flex center sb">
+          <div class="card">
+            <h1>Intersted in working with me?</h1>
+            <p>
+              I'm active on all social media platforms listed below, but you can
+              also me an email and I will get back to you within 24-48 hours.
+            </p>
+            <a href="" class="btn">Get in touch</a>
+          </div>
+          <div class="card"></div>
+        </section>
       </div>
     </main>
   </body>
