add footer section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a href="">Awards</a>
               </li>
               <li>
-                <a href="">Awards</a>
+                <a href="">About</a>
               </li>
             </ul>
           </nav>
@@ -129,5 +129,17 @@
         </section>
       </div>
     </main>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__wraper flex center sb">
+          <h4 class="logo">Jonathan Specter</h4>
+          <div class="socials">
+            <img src="./assets/Social Icons/Twitter.svg" alt="twiter icon" />
+            <img src="./assets/Social Icons/LinkedIn.svg" alt="linkedin icon" />
+            <img src="./assets/Social Icons/Github.svg" alt="github icon" />
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
