add diffent breakpoints on the main section

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               Codewell.cc
             </p>
           </div>
-          <div class="projec card">
+          <div class="project card">
             <img src="./assets/YelpCamp.png" alt="yelpcamp image" />
             <h1>YelpCamp.com</h1>
             <p>
