--- a/index.html
+++ b/index.html
@@ -38,9 +38,17 @@
               <li>
                 <a href="">About</a>
               </li>
+              <a class="btn navigation__btn--mobile" href="" class="btn"
+                >Get in touch</a
+              >
             </ul>
           </nav>
-          <a href="" class="btn">Get in touch</a>
+          <a class="btn navigation__btn" href="" class="btn">Get in touch</a>
+          <img
+            class="hamburger"
+            src="./assets/Hamburger Menu.svg"
+            alt="Hamburger menu"
+          />
         </div>
       </div>
     </header>
@@ -142,4 +150,5 @@
       </div>
     </footer>
   </body>
+  <script src="./app/js/script.js"></script>
 </html>
